--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,23 @@
 {
+    // Java 자동 빌드 설정 - 프로젝트 변경 시 자동으로 빌드 구성 업데이트
     "java.configuration.updateBuildConfiguration": "automatic",
+    // Java null 분석 모드 - null 안전성 검사를 자동으로 수행
     "java.compile.nullAnalysis.mode": "automatic",
-    // 기본 자동 포맷팅
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
+    // 기본 자동 포맷팅 설정
+    "editor.formatOnSave": true, // 저장 시 자동 포맷팅
+    "editor.formatOnPaste": true, // 붙여넣기 시 자동 포맷팅
     // Java 전용 설정
-    "java.format.enabled": true,
-    "java.saveActions.organizeImports": false,
-    // 파일 자동 저장
-    "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 1000,
+    "java.format.enabled": true, // Java 코드 포맷팅 활성화
+    "java.saveActions.organizeImports": false, // AI 코딩과 충돌 방지를 위해 import 자동 정리 비활성화
+    // 파일 자동 저장 설정
+    "files.autoSave": "afterDelay", // 지연 후 자동 저장
+    "files.autoSaveDelay": 1000, // 1초 후 자동 저장
     // 탭 및 들여쓰기 설정
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "editor.useTabStops": false,
+    "editor.tabSize": 4, // 탭 크기를 4칸으로 설정
+    "editor.insertSpaces": true, // 탭 대신 스페이스 사용
+    "editor.detectIndentation": false, // 파일별 들여쓰기 자동 감지 비활성화
+    "editor.useTabStops": false, // 탭 정지점 사용 안함 
     // Java 전용 들여쓰기 설정
-    "java.format.settings.url": "",
-    "java.format.settings.profile": "GoogleStyle"
+    "java.format.settings.url": "", // 사용자 정의 포맷팅 설정 URL (비어있음)
+    "java.format.settings.profile": "GoogleStyle" // Google Java 스타일 가이드 사용
 }
