--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,7 +115,7 @@ jobs:
             fi
             
             # 기존 설정을 유지하면서 upstream만 추가 (Bad Gateway 방지)
-            cat > /tmp/nginx-upstream.conf << UPSTREAM
+            cat > /tmp/nginx-upstream.conf << 'EOF'
             upstream backend {
                 server 127.0.0.1:${NEW_PORT} weight=100;
                 server 127.0.0.1:${CURRENT_PORT} weight=0;
@@ -132,10 +132,10 @@ jobs:
                     proxy_http_version 1.1;
                     proxy_connect_timeout 30s;
                     proxy_read_timeout 30s;
-                    proxy_set_header Host \$host;
-                    proxy_set_header X-Real-IP \$remote_addr;
-                    proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                    proxy_set_header X-Forwarded-Proto \$scheme;
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
                     add_header Cache-Control "no-cache, no-store, must-revalidate";
                 }
                 
@@ -146,13 +146,13 @@ jobs:
                     proxy_connect_timeout 90s;
                     proxy_read_timeout 90s;
                     proxy_send_timeout 90s;
-                    proxy_set_header Upgrade \$http_upgrade;
-                    proxy_set_header Connection \$http_connection;
-                    proxy_set_header Host \$host;
-                    proxy_cache_bypass \$http_upgrade;
-                    proxy_set_header X-Real-IP \$remote_addr;
-                    proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-                    proxy_set_header X-Forwarded-Proto \$scheme;
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection $http_connection;
+                    proxy_set_header Host $host;
+                    proxy_cache_bypass $http_upgrade;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
                     add_header X-Frame-Options "SAMEORIGIN" always;
                     add_header X-Content-Type-Options "nosniff" always;
                 }
@@ -162,7 +162,7 @@ jobs:
                     deny all;
                 }
             }
-            UPSTREAM
+            EOF
             
             sudo cp /tmp/nginx-upstream.conf /etc/nginx/sites-available/erp.conf
             
